# iot_yk

./: .gitignore  README.md
esp32-firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32-firmware/main/: CMakeLists.txt  idf_component.yml  main.c  task_handles.h
esp32-firmware/main/config/: ble_provision.c  ble_provision.h  device_config.h  nvs_config.c  nvs_config.h  provision_server.c  provision_server.h
esp32-firmware/main/discovery/: ykp_discovery.c  ykp_discovery.h
esp32-firmware/main/services/: health_service.c  health_service.h  ota_service.c  ota_service.h  relay_service.c  relay_service.h  sensor_service.c  sensor_service.h
esp32-firmware/main/transport/: legacy_udp.c  legacy_udp.h  ykp_udp.c  ykp_udp.h  ykp_websocket.c  ykp_websocket.h
esp32-firmware/main/wifi/: wifi_manager.c  wifi_manager.h
esp32-firmware/main/ykp_core/: ykp_cbor.h  ykp_constants.h  ykp_packet.c  ykp_packet.h  ykp_qos.c  ykp_qos.h  ykp_replay.c  ykp_replay.h  ykp_security.c  ykp_security.h  ykp_session.c  ykp_session.h
render-backend/: .env.example  build.js  package-lock.json  package.json  render.yaml  supabase_schema.sql
render-backend/src/: events.ts  server.ts
render-backend/src/api/: auth.ts  devices.ts  health.ts  ota.ts  stream.ts
render-wakeup/: README.md  package.json  wakeup.js
web-dashboard/: index.html  package-lock.json  package.json  render.yaml  vite.config.js
web-dashboard/src/: App.jsx  index.css
web-dashboard/src/lib/: api.js  (+2 more)
ykp-smart-control/: README.md  gradle.properties  metadata.json
ykp-smart-control/app/: build.gradle.kts
(+45 files in other folders)
