idf_component_register(
    SRCS
        "main.c"
        "ykp_core/ykp_packet.c"
        "ykp_core/ykp_session.c"
        "ykp_core/ykp_security.c"
        "ykp_core/ykp_replay.c"
        "ykp_core/ykp_qos.c"
        "transport/ykp_websocket.c"
        "transport/ykp_udp.c"
        "services/relay_service.c"
        "services/sensor_service.c"
        "services/health_service.c"
        "services/ota_service.c"
        "discovery/ykp_discovery.c"
        "config/nvs_config.c"
        "config/ble_provision.c"
        "wifi/wifi_manager.c"
    INCLUDE_DIRS
        "."
        "ykp_core"
        "transport"
        "services"
        "discovery"
        "config"
        "wifi"
    REQUIRES
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        esp_http_client
        esp_websocket_client
        cjson
        mbedtls
        app_update
        esp_timer
        esp_driver_gpio
        lwip
        esp_system
        log
        freertos
        esp_adc
        esp_pm
        network_provisioning
        bt
)
